--- a/src/common/views/viewconfigdialog.ui
+++ b/src/common/views/viewconfigdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>599</width>
+    <width>722</width>
     <height>333</height>
    </rect>
   </property>
@@ -25,23 +25,129 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QListWidget" name="listPalettes">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-     </widget>
-     <widget class="QListWidget" name="listRoles">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
+     <property name="childrenCollapsible">
+      <bool>false</bool>
+     </property>
+     <widget class="QWidget" name="">
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="2" column="0" colspan="5">
+        <widget class="QCheckBox" name="checkSavedInSetupFile">
+         <property name="toolTip">
+          <string>Customize colors of the current setup file</string>
+         </property>
+         <property name="text">
+          <string>Saved in setup file</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="5">
+        <widget class="QListWidget" name="listPresets">
+         <property name="editTriggers">
+          <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+         </property>
+         <property name="uniformItemSizes">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="3">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Presets :</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QToolButton" name="addPreset">
+         <property name="toolTip">
+          <string>Add new preset</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../resources/resources.qrc">
+           <normaloff>:/img16x16/edit_add.png</normaloff>:/img16x16/edit_add.png</iconset>
+         </property>
+         <property name="shortcut">
+          <string>Ins</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QToolButton" name="delPreset">
+         <property name="toolTip">
+          <string>Remove preset</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../resources/resources.qrc">
+           <normaloff>:/img16x16/edit_remove.png</normaloff>:/img16x16/edit_remove.png</iconset>
+         </property>
+         <property name="shortcut">
+          <string>Del</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
      <widget class="QWidget" name="">
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Objects :</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Elements :</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QListWidget" name="listPalettes">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QListWidget" name="listRoles">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="2">
+        <widget class="QDialogButtonBox" name="buttonBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="standardButtons">
+          <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QGroupBox" name="groupColor">
@@ -193,7 +299,6 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
-            <zorder>dockWidget</zorder>
            </widget>
           </item>
          </layout>
@@ -202,33 +307,6 @@
       </layout>
      </widget>
     </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_6">
-     <item>
-      <widget class="QCheckBox" name="checkSavedInSetupFile">
-       <property name="text">
-        <string>Save in setup file</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
   </layout>
  </widget>
@@ -246,7 +324,11 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
@@ -255,7 +337,7 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>588</x>
+     <x>165</x>
      <y>322</y>
     </hint>
     <hint type="destinationlabel">
@@ -271,7 +353,7 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>588</x>
+     <x>165</x>
      <y>322</y>
     </hint>
     <hint type="destinationlabel">
@@ -287,12 +369,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>577</x>
-     <y>105</y>
+     <x>618</x>
+     <y>104</y>
     </hint>
     <hint type="destinationlabel">
-     <x>529</x>
-     <y>104</y>
+     <x>570</x>
+     <y>103</y>
     </hint>
    </hints>
   </connection>
@@ -303,12 +385,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>529</x>
-     <y>104</y>
+     <x>570</x>
+     <y>103</y>
     </hint>
     <hint type="destinationlabel">
-     <x>577</x>
-     <y>105</y>
+     <x>618</x>
+     <y>104</y>
     </hint>
    </hints>
   </connection>
@@ -319,12 +401,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>577</x>
-     <y>53</y>
+     <x>618</x>
+     <y>52</y>
     </hint>
     <hint type="destinationlabel">
-     <x>529</x>
-     <y>52</y>
+     <x>570</x>
+     <y>51</y>
     </hint>
    </hints>
   </connection>
@@ -335,12 +417,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>529</x>
-     <y>52</y>
+     <x>570</x>
+     <y>51</y>
     </hint>
     <hint type="destinationlabel">
-     <x>577</x>
-     <y>53</y>
+     <x>618</x>
+     <y>52</y>
     </hint>
    </hints>
   </connection>
@@ -351,12 +433,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>529</x>
-     <y>78</y>
+     <x>570</x>
+     <y>77</y>
     </hint>
     <hint type="destinationlabel">
-     <x>577</x>
-     <y>79</y>
+     <x>618</x>
+     <y>78</y>
     </hint>
    </hints>
   </connection>
@@ -367,12 +449,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>577</x>
-     <y>79</y>
+     <x>618</x>
+     <y>78</y>
     </hint>
     <hint type="destinationlabel">
-     <x>529</x>
-     <y>78</y>
+     <x>570</x>
+     <y>77</y>
     </hint>
    </hints>
   </connection>
@@ -383,12 +465,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>529</x>
-     <y>130</y>
+     <x>570</x>
+     <y>129</y>
     </hint>
     <hint type="destinationlabel">
-     <x>577</x>
-     <y>131</y>
+     <x>618</x>
+     <y>130</y>
     </hint>
    </hints>
   </connection>
@@ -399,12 +481,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>577</x>
-     <y>131</y>
+     <x>618</x>
+     <y>130</y>
     </hint>
     <hint type="destinationlabel">
-     <x>529</x>
-     <y>130</y>
+     <x>570</x>
+     <y>129</y>
     </hint>
    </hints>
   </connection>
