--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -32,5 +32,7 @@
         <file>img16x16/editcut.png</file>
         <file>img16x16/edit_add.png</file>
         <file>img16x16/edit_remove.png</file>
+        <file>img16x16/redo.png</file>
+        <file>img16x16/undo.png</file>
     </qresource>
 </RCC>
