--- a/src/common/mainwindow.ui
+++ b/src/common/mainwindow.ui
@@ -802,6 +802,34 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="dockUndo">
+   <property name="windowTitle">
+    <string>Undo history</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_9">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QUndoView" name="listUndo">
+       <property name="frameShape">
+        <enum>QFrame::NoFrame</enum>
+       </property>
+       <property name="uniformItemSizes">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionSave">
    <property name="icon">
     <iconset resource="../resources/resources.qrc">
@@ -1131,6 +1159,11 @@
    <class>ListAudioDevicesView</class>
    <extends>QTreeView</extends>
    <header>views/listaudiodevicesview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QUndoView</class>
+   <extends>QListView</extends>
+   <header>qundoview.h</header>
   </customwidget>
  </customwidgets>
  <resources>
