--- a/src/common/views/programlist.ui
+++ b/src/common/views/programlist.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>197</width>
-    <height>148</height>
+    <width>202</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,6 +41,46 @@
          <property name="spacing">
           <number>0</number>
          </property>
+         <item>
+          <widget class="QToolButton" name="btAddGroup">
+           <property name="toolTip">
+            <string>Add a group</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../resources/resources.qrc">
+             <normaloff>:/img16x16/edit_add.png</normaloff>:/img16x16/edit_add.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>10</width>
+             <height>10</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="btDelGroup">
+           <property name="toolTip">
+            <string>Remove a group</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../resources/resources.qrc">
+             <normaloff>:/img16x16/edit_remove.png</normaloff>:/img16x16/edit_remove.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>10</width>
+             <height>10</height>
+            </size>
+           </property>
+          </widget>
+         </item>
          <item>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
@@ -127,6 +167,46 @@
           <number>0</number>
          </property>
          <item>
+          <widget class="QToolButton" name="btAddProgram">
+           <property name="toolTip">
+            <string>Add a program</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../resources/resources.qrc">
+             <normaloff>:/img16x16/edit_add.png</normaloff>:/img16x16/edit_add.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>10</width>
+             <height>10</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="btDelProgram">
+           <property name="toolTip">
+            <string>Remove a program</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../resources/resources.qrc">
+             <normaloff>:/img16x16/edit_remove.png</normaloff>:/img16x16/edit_remove.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>10</width>
+             <height>10</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -210,13 +290,90 @@
    <class>ProgListView</class>
    <extends>QListView</extends>
    <header>views/proglistview.h</header>
+   <slots>
+    <slot>InsertItem()</slot>
+    <slot>DeleteItem()</slot>
+   </slots>
   </customwidget>
   <customwidget>
    <class>GroupListView</class>
    <extends>QListView</extends>
    <header>views/grouplistview.h</header>
+   <slots>
+    <slot>InsertItem()</slot>
+    <slot>DeleteItem()</slot>
+   </slots>
   </customwidget>
  </customwidgets>
- <resources/>
- <connections/>
+ <resources>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>btAddGroup</sender>
+   <signal>clicked()</signal>
+   <receiver>listGrps</receiver>
+   <slot>InsertItem()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>11</x>
+     <y>10</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>33</x>
+     <y>49</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btDelGroup</sender>
+   <signal>clicked()</signal>
+   <receiver>listGrps</receiver>
+   <slot>DeleteItem()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>32</x>
+     <y>8</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>55</x>
+     <y>45</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btAddProgram</sender>
+   <signal>clicked()</signal>
+   <receiver>listProgs</receiver>
+   <slot>InsertItem()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>110</x>
+     <y>14</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>125</x>
+     <y>58</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btDelProgram</sender>
+   <signal>clicked()</signal>
+   <receiver>listProgs</receiver>
+   <slot>DeleteItem()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>134</x>
+     <y>12</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>158</x>
+     <y>52</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
