--- a/src/common/views/programlist.ui
+++ b/src/common/views/programlist.ui
@@ -10,6 +10,12 @@
     <height>198</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1</width>
+    <height>0</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string notr="true">Form</string>
   </property>
@@ -29,7 +35,7 @@
       <number>1</number>
      </property>
      <property name="childrenCollapsible">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -55,7 +61,7 @@
            </property>
            <property name="iconSize">
             <size>
-             <width>10</width>
+             <width>13</width>
              <height>10</height>
             </size>
            </property>
@@ -75,14 +81,14 @@
            </property>
            <property name="iconSize">
             <size>
-             <width>10</width>
+             <width>13</width>
              <height>10</height>
             </size>
            </property>
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer_2">
+          <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -96,6 +102,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="grpAutosaveOn">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="toolTip">
             <string>Autosave changes</string>
            </property>
@@ -109,6 +121,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="grpAutosaveAsk">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="toolTip">
             <string>Prompt</string>
            </property>
@@ -119,6 +137,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="grpAutosaveOff">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="toolTip">
             <string>Discard unsaved changes</string>
            </property>
@@ -130,12 +154,34 @@
         </layout>
        </item>
        <item>
+        <widget class="QLabel" name="label">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>1</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Groups</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="GroupListView" name="listGrps">
          <property name="minimumSize">
           <size>
            <width>1</width>
            <height>0</height>
           </size>
+         </property>
+         <property name="contextMenuPolicy">
+          <enum>Qt::CustomContextMenu</enum>
          </property>
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
@@ -180,7 +226,7 @@
            </property>
            <property name="iconSize">
             <size>
-             <width>10</width>
+             <width>13</width>
              <height>10</height>
             </size>
            </property>
@@ -200,14 +246,14 @@
            </property>
            <property name="iconSize">
             <size>
-             <width>10</width>
+             <width>13</width>
              <height>10</height>
             </size>
            </property>
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer">
+          <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -221,6 +267,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="progAutosaveOn">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="toolTip">
             <string>Autosave changes</string>
            </property>
@@ -234,6 +286,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="progAutosaveAsk">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="toolTip">
             <string>Prompt</string>
            </property>
@@ -244,6 +302,12 @@
          </item>
          <item>
           <widget class="QRadioButton" name="progAutosaveOff">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="toolTip">
             <string>Discard unsaved changes</string>
            </property>
@@ -255,12 +319,34 @@
         </layout>
        </item>
        <item>
+        <widget class="QLabel" name="label_2">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>1</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Programs</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="ProgListView" name="listProgs">
          <property name="minimumSize">
           <size>
            <width>1</width>
            <height>0</height>
           </size>
+         </property>
+         <property name="contextMenuPolicy">
+          <enum>Qt::CustomContextMenu</enum>
          </property>
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
