fixed resize with reaper, added a minimum window size

--- a/src/common/views/vstpluginwindow.ui
+++ b/src/common/views/vstpluginwindow.ui
@@ -46,6 +46,9 @@
         <height>90</height>
        </rect>
       </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
      </widget>
     </widget>
    </item>
