--- a/src/common/views/vstshellselect.ui
+++ b/src/common/views/vstshellselect.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>VstShellSelect</class>
  <widget class="QWidget" name="VstShellSelect">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
