--- a/src/common/mainwindow.ui
+++ b/src/common/mainwindow.ui
@@ -10,6 +10,9 @@
     <height>570</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::StrongFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>VstBoard</string>
   </property>
