--- a/src/common/mainwindow.ui
+++ b/src/common/mainwindow.ui
@@ -316,6 +316,7 @@
      <addaction name="actionValue"/>
     </widget>
     <addaction name="actionConfig"/>
+    <addaction name="actionKeyBinding"/>
     <addaction name="actionRefresh_Audio_devices"/>
     <addaction name="actionRefresh_Midi_devices"/>
     <addaction name="menuTool"/>
@@ -378,6 +379,7 @@
    <addaction name="separator"/>
    <addaction name="actionConfig"/>
    <addaction name="actionAppearance"/>
+   <addaction name="actionKeyBinding"/>
    <addaction name="separator"/>
    <addaction name="actionCable"/>
    <addaction name="actionValue"/>
@@ -1190,6 +1192,18 @@
    </property>
    <property name="shortcut">
     <string>V</string>
+   </property>
+  </action>
+  <action name="actionKeyBinding">
+   <property name="icon">
+    <iconset resource="../resources/resources.qrc">
+     <normaloff>:/img16x16/key_bindings.png</normaloff>:/img16x16/key_bindings.png</iconset>
+   </property>
+   <property name="text">
+    <string>Keyboard mapping</string>
+   </property>
+   <property name="toolTip">
+    <string>Keyboard mapping</string>
    </property>
   </action>
  </widget>
